<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">androidTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_title">主页</string>
    <string name="dummy_button">按钮</string>
    <string name="test_ts">提示</string>
    <string name="test_ms">描述</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="check1">多选1</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="spinner">你选择的是</string>
    
    
    <string name="button_alert">AlerDialog</string>
    <string name="button_list">AlerDialog_list</string>
    <string name="button_list_withbutton">AlerDialog_list_withbutton</string>
    <string name="button_Mul_list_withbutton">button_Mul_list_withbutton</string>

    <string name="button_progress">ProgressDialog</string>
    <string name="button_diy">自定义</string>
    <string name="cxrq">查询日期</string>
    
</resources>