<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:layout_weight="1"
        android:text="@string/main_title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:layout_weight="1"
        android:text="@string/hello_world" />
    
            <Button
                android:id="@+id/dummy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />
</LinearLayout>